Внес правки по рекомендациям наставника

--- a/source/index.html
+++ b/source/index.html
@@ -11,81 +11,100 @@
     <a class="page-header__logo">
       <img src="img/logo-mobile.svg" alt="Погнали" width="96" height="15">
     </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item">
-          <a href="#">О сервисе</a>
+    <button class="main-nav__toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
+    <div class="menu">
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="#">О сервисе</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Направления</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Попутчики</a>
+          </li>
+        </ul>
+        <div class="main-nav__list user-list">
+          <a class="user-list__login">Авторизация</a>
+        </div>
+      </nav>
+      <ul class="contact-list">
+        <li class="contact-list__item">
+          <a href="tel:88005558628">
+            8 800 555-86-28
+          </a>
         </li>
-        <li class="site-list__item">
-          <a href="form.html">Направления</a>
+        <li class="contact-list__item">
+          <a href="mailto:mail@htmlacademy.ru">
+            mail@htmlacademy.ru
+          </a>
         </li>
-        <li class="site-list__item">
-          <a href="catalog.html">Попутчики</a>
+      </ul>
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a href="#">
+            Facebook
+          </a>
+        </li>
+        <li class="social-list__item">
+          <a href="#">
+            Vkontakte
+          </a>
+        </li>
+        <li class="social-list__item">
+          <a href="#">
+            Instagram
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <main class="page__main">
+    <section class="section">
+      <h1 class="section__title">
+        В путешествие с крутыми попутчиками!
+      </h1>
+      <ul class="contact-list">
+        <li class="contact-list__item">
+          <a href="tel:88005558628">
+            8 800 555-86-28
+          </a>
+        </li>
+        <li class="contact-list__item">
+          <a href="mailto:mail@htmlacademy.ru">
+            mail@htmlacademy.ru
+          </a>
         </li>
       </ul>
       <div class="main-nav__list user-list">
         <a class="user-list__login">Авторизация</a>
       </div>
-    </nav>
-    <h1>
-      В путешествие с крутыми попутчиками!
-    </h1>
-    <ul class="contact-list">
-      <li class="contact-list__item">
-        <a href="tel:88005558628">
-          8 800 555-86-28
-        </a>
-      </li>
-      <li class="contact-list__item">
-        <a href="mailto:mail@htmlacademy.ru">
-          mail@htmlacademy.ru
-        </a>
-      </li>
-    </ul>
-    <ul class="social-list">
-      <li class="social-list__item">
-        <a href="#">
-          Facebook
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a href="#">
-          Vkontakte
-        </a>
-      </li>
-      <li class="social-list__item">
-        <a href="#">
-          Instagram
-        </a>
-      </li>
-    </ul>
-    <figure class="quote">
-      <blockquote>
-        «Лучшее приложение, что я видел в жизни!»
-      </blockquote>
-      <figcaption>
-        Мурат Эльтазин главный редактор газеты «гаджетлайф»
-      </figcaption>
-    </figure>
-    <ol class="steps-list">
-      <li class="steps-list__item">
-        Выберите направление
-      </li>
-      <li class="steps-list__item">
-        Изучите идеи путешественников
-      </li>
-      <li class="steps-list__item">
-        Находите тех, кто похож на вас
-      </li>
-      <li class="steps-list__item">
-        Путешествуйте вместе!
-      </li>
-    </ol>
-  </header>
-  <main class="page__main">
+      <figure class="quote">
+        <blockquote>
+          «Лучшее приложение, что я видел в жизни!»
+        </blockquote>
+        <figcaption>
+          Мурат Эльтазин главный редактор газеты «гаджетлайф»
+        </figcaption>
+      </figure>
+      <ol class="steps-list">
+        <li class="steps-list__item">
+          Выберите направление
+        </li>
+        <li class="steps-list__item">
+          Изучите идеи путешественников
+        </li>
+        <li class="steps-list__item">
+          Находите тех, кто похож на вас
+        </li>
+        <li class="steps-list__item">
+          Путешествуйте вместе!
+        </li>
+      </ol>
+    </section>
     <section class="section">
       <h2 class="section__title">О сервисе</h2>
       <p>
